# infra2

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  SECRETS.md  pyproject.toml  tasks.py
bootstrap/: .env.example  .env.production.example  README.md  self_host_1password.yaml
docs/: README.md  README_tempate.md  env_management.md  mkdocs.yml  requirements.txt
e2e_regressions/: .env.example  .github-workflow-example.yml  .gitignore  Makefile  README.md  conftest.py  pytest.ini  run_tests.sh
finance/: README.md  __init__.py
finance_report/: README.md  __init__.py
harness/: README.md  repos.yaml
libs/: README.md  __init__.py  alerting.py  app_deploy_request.py  availability_ledger.py  backup_restore.py  backup_verification.py  ci_gate_schema.py  common.py  compose_lock.py  config.py  console.py  const.py  container_breakdown.py  container_breakdown_watch.py  coverage_regression.py  deploy_contract.py  deploy_dependencies.py  deploy_env_config.py  deploy_queue.py  deploy_queue_guard.py  deployer.py  dokploy.py  dokploy_route_canary.py  env.py  harness_manifest.py  iac_runner_client.py  image_pins.py  infra_probes.py  observability_dashboards.py  pipeline_stage_contract.py  probe_specs.py  recency.py  resident_watchers.py  service_facets.py  service_identity.py  service_registry.py  vault_self_refresh_audit.py  vault_tokens.py  watchdog_signal_entries.py
platform/: .env.example  .env.production.example  README.md  __init__.py
playground/: README.md  yahoo_headless_test.py
repos/: README.md
scripts/: add_vault_agent_exit_on_failure.py  (+2 more)
(+582 files in other folders)
